' Generated by UML Generator
' Encoded: ZLDDJyCm3BtdL-G8OfKuLsWQsYwJE20DVe2RXCqYJQfyS03ntqcQf4s0msxrg_sUd-tih0FZ_2Y9VKSrWO6HCWdMFZfdSF1E79bM9_mKz9vSa0lAq30f29cpw0iAnU403kWNeVJEpN6VSVBTvgKSfSV1Y9wUWe8wHuI14sTj46nFdz2wXtq1jl6tjnuCwlBpDONRbNr9JmB8UuhA_Qyr6SqzSmlRSuuhkW9TnIOOwfvoxOSmbO1mOPd1AQ2gjMY0EM629BBeSzy2ivBw4Cf5RqcnyjVafhuc2BbIGgioXjGQ6I3MhT32cQTuXKSn0ieQu1XS9uE7yXdnI-WlRa7kzJYPTPbpLCrtAKhYBBXe19KVXT5BHmmz1zvC7T3-TPHqyd3o2e-hCHRcXJDH1ju4kzIpwhg89fQRNmGRsfHlQ5Dy6vkedaBNRSiBo8UlkswzqXhCQo3h2KUqN21PJZ4Hj2TJLXZbraKKTAwOpP1Ta0jl_0S
' URL: http://www.plantuml.com/plantuml/uml/ZLDDJyCm3BtdL-G8OfKuLsWQsYwJE20DVe2RXCqYJQfyS03ntqcQf4s0msxrg_sUd-tih0FZ_2Y9VKSrWO6HCWdMFZfdSF1E79bM9_mKz9vSa0lAq30f29cpw0iAnU403kWNeVJEpN6VSVBTvgKSfSV1Y9wUWe8wHuI14sTj46nFdz2wXtq1jl6tjnuCwlBpDONRbNr9JmB8UuhA_Qyr6SqzSmlRSuuhkW9TnIOOwfvoxOSmbO1mOPd1AQ2gjMY0EM629BBeSzy2ivBw4Cf5RqcnyjVafhuc2BbIGgioXjGQ6I3MhT32cQTuXKSn0ieQu1XS9uE7yXdnI-WlRa7kzJYPTPbpLCrtAKhYBBXe19KVXT5BHmmz1zvC7T3-TPHqyd3o2e-hCHRcXJDH1ju4kzIpwhg89fQRNmGRsfHlQ5Dy6vkedaBNRSiBo8UlkswzqXhCQo3h2KUqN21PJZ4Hj2TJLXZbraKKTAwOpP1Ta0jl_0S
' Generated on: 2025-10-23T23:51:13.073188100

@startuml
skinparam classAttributeIconSize 0
hide circle

class TiendaData {
  +tienda: Tienda
}

class Tienda {
  +nombre: String
  +categorias: List<Categoria>
  +usuarios: List<Usuario>
}

class Categoria {
  +id: int
  +nombre: String
  +productos: List<Producto>
}

class Producto {
  +id: int
  +nombre: String
  +precio: double
  +descripcion: String
  +caracteristicas: Caracteristicas
  +inventario: int
}

class Caracteristicas {
  +pantalla: String
  +camara: String
  +bateria: String
}

class Usuario {
  +id: int
  +nombre: String
  +email: String
  +direccion: Direccion
  +historialCompras: List<Compra>
}

class Direccion {
  +calle: String
  +numero: int
  +ciudad: String
  +pais: String
}

class Compra {
  +productoId: int
  +cantidad: int
  +fecha: String
  --
  +Compra(productoId: int, cantidad: int, fecha: String)
}

TiendaData --> Tienda
Tienda o-- Categoria
Tienda o-- Usuario
Categoria o-- Producto
Producto o-- Caracteristicas
Usuario --> Direccion
Usuario o-- Compra
@enduml